git ignore chante

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 20250425-python/tensorflow-hangul-recognition-master/image-data
 20250425-python/tensorflow-hangul-recognition-master/fonts
+20250425-python/tensorflow-hangul-recognition-master/
+20250425-python/yolo3
+20250425-python/openpose
